# ChangeLog for games-util/taxidraw
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-util/taxidraw/Attic/ChangeLog,v 1.4 2009/10/20 12:58:33 maekke Exp $

  20 Oct 2009; Markus Meier <maekke@gentoo.org> taxidraw-0.3.2.ebuild:
  x86 stable, bug #285385

  17 Aug 2009; Michael Sterrett <mr_bones_@gentoo.org>
  taxidraw-0.3.2.ebuild:
  EAPI=2

  28 Sep 2007; Ryan Hill <dirtyepic@gentoo.org> taxidraw-0.3.2.ebuild:
  Lock wxGTK to 2.6.

*taxidraw-0.3.2 (14 Feb 2007)

  14 Feb 2007; Tristan Heaven <nyhm@gentoo.org>
  +files/taxidraw-0.3.2-gcc41.patch, +metadata.xml, +taxidraw-0.3.2.ebuild:
  Initial commit, bug #95517
