@@ -1,6 +1,6 @@
-# Copyright 1999-2009 Gentoo Foundation
+# Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/games-util/taxidraw/Attic/taxidraw-0.3.2.ebuild,v 1.4 2009/10/20 12:58:33 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-util/taxidraw/Attic/taxidraw-0.3.2.ebuild,v 1.5 2010/05/25 13:43:54 hwoarang Exp $
 
 EAPI=2
 WX_GTK_VER="2.6"
@@ -13,7 +13,7 @@ SRC_URI="mirror://sourceforge/${PN}/${MY_P}-src.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="x86"
+KEYWORDS="~amd64 x86"
 IUSE=""
 
 DEPEND="x11-libs/wxGTK:2.6[X]
